# defaults-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  build.rs  demo.plist  hookman.toml
.github/: FUNDING.yml
.github/workflows/: pages.yml  refactor.yml  release.yml  tests.yml
examples/dock-example/: Cargo.toml
examples/dock-example/src/: main.rs
man/man1/: cutler.1  drs.1
src/: cli.rs  lib.rs  main.rs  preferences.rs  prettifier.rs
src/core/: convert.rs  error.rs  foundation.rs  mod.rs  types.rs
src/preferences/: convert.rs  mod.rs  types.rs
src/prefs/: backend.rs  core.rs  error.rs  mod.rs  types.rs
xtask/: Cargo.toml
xtask/src/: main.rs
