[package]
name = "defaults-rs"
version = "0.5.0"
edition = "2024"
authors = ["Anindya Shiddhartha <hitblastlive@gmail.com>"]
description = "Near drop-in replacement for the macOS defaults CLI with API bindings for Rust."
documentation = "https://hitblast.github.io/defaults-rs"
license = "MIT"
repository = "https://github.com/hitblast/defaults-rs"
keywords = ["macos", "defaults", "cli", "preferences", "plist"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "drs"
path = "src/main.rs"

[dependencies]
plist = "1.8"
core-foundation = "0.9"
core-foundation-sys = "0.8"
anyhow = "1.0.100"
dirs = "6.0.0"

[features]
default = ["cli"]
cli = ["clap"]

[dependencies.clap]
version = "4.5"
optional = true

[workspace]
members = [
    ".",
    "xtask",
    "examples/*"
]
