[package]
name = "defaults-rs"
version = "0.6.1"
edition = "2024"
authors = ["Anindya Shiddhartha <hitblastlive@gmail.com>"]
description = "Open-source interface to a user's defaults on macOS"
documentation = "https://machlit.github.io/defaults-rs"
license = "MIT"
repository = "https://github.com/machlit/defaults-rs"
keywords = ["macos", "defaults", "cli", "preferences", "plist"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "drs"
path = "src/main.rs"

[dependencies]
plist = "1.8"
core-foundation = "0.9"
core-foundation-sys = "0.8"
anyhow = "1.0.100"
dirs = "6.0.0"
chrono = "0.4.42"

[features]
default = ["cli"]
cli = ["clap", "skim"]

[dependencies.clap]
version = "4.5"
optional = true

[dependencies.skim]
version = "0.20.5"
optional = true

[workspace]
members = [
    ".",
    "xtask",
    "examples/*"
]
